# private-ai-verifier

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
confidential_verifier/: __init__.py  providers.py  sdk.py  types.py
confidential_verifier/providers/: __init__.py  base.py  chutes.py  nearai.py  redpill.py  tinfoil.py
confidential_verifier/verifiers/: __init__.py  base.py  chutes.py  dstack.py  intel.py  nearai.py  nvidia.py  phala.py  redpill.py  tinfoil.py
config/: tinfoil_config.yml
docs/: intel-ita.md  nearai_verification.md  redpill_verification.md  tinfoil_verification.md
scripts/: update_config.py
server/: main.py
src/: index.ts  types.ts
src/config/: tinfoil_config.yml
src/providers/: nearai.ts  redpill.ts  tinfoil.ts
src/verification/: index.ts  intel.ts  nvidia.ts  types.ts
test/: api_split_flow.ts  data.ts  verify_integration.ts
tests/: test_data.py  test_dstack.py  test_nearai.py  test_phala_live.py  test_redpill.py  test_redpill_verifier.py  test_sdk.py  test_tinfoil.py
